make tool and supervisor get-requests project specific
